add release dates to detailed changelog

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -64,7 +64,7 @@
             </div>
             <div class="card__content changelog-content">
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.22.0</h3>
+                    <h3 class="version-entry__title">0.22.0 <span class="version-entry__date">February 1, 2026</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fixed SPA navigation timing issue where URL wasn't updated during page transitions</li>
                         <li>New logging system with configurable log levels (ERROR/WARN/INFO/DEBUG)</li>
@@ -74,7 +74,7 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.21.4</h3>
+                    <h3 class="version-entry__title">0.21.4 <span class="version-entry__date">February 1, 2026</span></h3>
                     <ul class="version-entry__changes">
                         <li>Improved support for YouTube's January 2026 layout update</li>
                         <li>Redesigned settings loader with local-first approach</li>
@@ -82,56 +82,56 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.21.3</h3>
+                    <h3 class="version-entry__title">0.21.3 <span class="version-entry__date">January 31, 2026</span></h3>
                     <ul class="version-entry__changes">
                         <li>Support for YouTube's January 2026 layout update</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.21.2</h3>
+                    <h3 class="version-entry__title">0.21.2 <span class="version-entry__date">October 18, 2025</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fix YT premieres not hidden when config enabled</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.21.1</h3>
+                    <h3 class="version-entry__title">0.21.1 <span class="version-entry__date">September 17, 2025</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fix YT's new progress bar not being detected to mark video as watched</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.21.0</h3>
+                    <h3 class="version-entry__title">0.21.0 <span class="version-entry__date">September 16, 2025</span></h3>
                     <ul class="version-entry__changes">
                         <li>Support for subscription feed list view</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.20.0</h3>
+                    <h3 class="version-entry__title">0.20.0 <span class="version-entry__date">September 16, 2025</span></h3>
                     <ul class="version-entry__changes">
                         <li>Support for Chrome's v3 manifest</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.19.2</h3>
+                    <h3 class="version-entry__title">0.19.2 <span class="version-entry__date">August 3, 2024</span></h3>
                     <ul class="version-entry__changes">
                         <li>Support YouTube's updated layout</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.19.0</h3>
+                    <h3 class="version-entry__title">0.19.0 <span class="version-entry__date">October 2, 2023</span></h3>
                     <ul class="version-entry__changes">
                         <li>Sync watch history across devices (using same browser)</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.18.0</h3>
+                    <h3 class="version-entry__title">0.18.0 <span class="version-entry__date">September 20, 2023</span></h3>
                     <ul class="version-entry__changes">
                         <li>Enable UI for channel's live video (livestream) history</li>
                         <li>Moved forced-grid rules in css to improve performance</li>
@@ -151,14 +151,14 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.17.5</h3>
+                    <h3 class="version-entry__title">0.17.5 <span class="version-entry__date">September 10, 2023</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fix YT grid layout, where hidden videos were leaving blank spaces at the end of rows</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.17.4</h3>
+                    <h3 class="version-entry__title">0.17.4 <span class="version-entry__date">August 31, 2023</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fix inline ads without link breaking functionality</li>
                         <li>Fix YT update breaking functionality (again, thanks YT)</li>
@@ -166,7 +166,7 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.17.3</h3>
+                    <h3 class="version-entry__title">0.17.3 <span class="version-entry__date">April 25, 2023</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fixed shorts not being marked as watched automatically upon viewing (if setting is enabled)</li>
                         <li>Fixed YT UI update breaking the "Mark as watched" overlay on both the subscriptions and channel videos pages</li>
@@ -174,7 +174,7 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.17.2</h3>
+                    <h3 class="version-entry__title">0.17.2 <span class="version-entry__date">February 11, 2023</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fixed issue where setting option for using YT's watched state to mark as watched to off was ignored</li>
                         <li>Removed support for legacy YouTube (pre-Polymer)</li>
@@ -182,14 +182,14 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.17.1</h3>
+                    <h3 class="version-entry__title">0.17.1 <span class="version-entry__date">February 8, 2023</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fixed issue where YT design update caused the detection of videos and therefore hiding them to break on channel video pages</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.17.0</h3>
+                    <h3 class="version-entry__title">0.17.0 <span class="version-entry__date">March 16, 2022</span></h3>
                     <ul class="version-entry__changes">
                         <li>Now you can auto-hide (mark as watched) Shorts! This behaviour is off by default, so you'll have to turn it on in the settings page</li>
                         <li>Fixed issue with new layout YT is rolling out that broke the feed when a Short was included</li>
@@ -198,7 +198,7 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.16.1</h3>
+                    <h3 class="version-entry__title">0.16.1 <span class="version-entry__date">August 28, 2021</span></h3>
                     <ul class="version-entry__changes">
                         <li>Now you can hide premieres until they are available to watch! Enable this feature in the settings</li>
                         <li>Mark as Watched toggle is back. Cause for disappearance was YT changing the name of their toggle element</li>
@@ -206,35 +206,35 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.15.2</h3>
+                    <h3 class="version-entry__title">0.15.2 <span class="version-entry__date">August 28, 2021</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fix: "Use YouTube's watched gauge" Settings should now correctly save</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.15.1</h3>
+                    <h3 class="version-entry__title">0.15.1 <span class="version-entry__date">March 14, 2021</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fix: Changelog should now only be shown once per version (not with every browser update)</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.15.0</h3>
+                    <h3 class="version-entry__title">0.15.0 <span class="version-entry__date">December 26, 2020</span></h3>
                     <ul class="version-entry__changes">
                         <li>Reintroduced ability to automatically mark as watched videos marked by YouTube (using red bar on bottom of thumbnail)</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.14.1</h3>
+                    <h3 class="version-entry__title">0.14.1 <span class="version-entry__date">December 25, 2020</span></h3>
                     <ul class="version-entry__changes">
                         <li>Hotfix: Fix missing Mark as watched button</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.14</h3>
+                    <h3 class="version-entry__title">0.14 <span class="version-entry__date">December 25, 2020</span></h3>
                     <ul class="version-entry__changes">
                         <li>Added hiding watched videos on the YouTube homepage</li>
                         <li>Added hiding watched videos on Channel videos page</li>
@@ -249,14 +249,14 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.13.1</h3>
+                    <h3 class="version-entry__title">0.13.1 <span class="version-entry__date">March 31, 2020</span></h3>
                     <ul class="version-entry__changes">
                         <li>This version fixes YouTube's slight change to their DOM layout in a recent update, which caused the extension to stop working</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.13</h3>
+                    <h3 class="version-entry__title">0.13 <span class="version-entry__date">July 27, 2019</span></h3>
                     <ul class="version-entry__changes">
                         <li>Added basic functionality to the settings page. Now supports saving and loading of configuration</li>
                         <li>Added basic configuration for subs feed to settings page</li>
@@ -266,7 +266,7 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.12</h3>
+                    <h3 class="version-entry__title">0.12 <span class="version-entry__date">July 13, 2019</span></h3>
                     <ul class="version-entry__changes">
                         <li>Replaced Hide Watched checkbox with prettier, YouTube style toggle button</li>
                         <li>Added settings page. Empty for now</li>
@@ -274,7 +274,7 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.11</h3>
+                    <h3 class="version-entry__title">0.11 <span class="version-entry__date">May 20, 2019</span></h3>
                     <ul class="version-entry__changes">
                         <li>Added changelog page that opens when extension updates</li>
                         <li>Fixed bug where extension would not active properly on pages in some cases (<a href="https://github.com/OsaSoft/youtube-better-subscriptions/issues/56" target="_blank" rel="noopener">#56</a>)</li>
@@ -282,42 +282,42 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.10</h3>
+                    <h3 class="version-entry__title">0.10 <span class="version-entry__date">September 29, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Sections now have a checkbox that collapses them, fixed alignment of Hide Watched and Mark All as Watched buttons</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.9</h3>
+                    <h3 class="version-entry__title">0.9 <span class="version-entry__date">September 23, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Sections with no visible videos in it are now hidden</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.8.1</h3>
+                    <h3 class="version-entry__title">0.8.1 <span class="version-entry__date">September 18, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fixed bug where video loading wouldn't trigger in certain situations</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.8</h3>
+                    <h3 class="version-entry__title">0.8 <span class="version-entry__date">September 16, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Added watched overlay and Mark as not watched button to marked videos when not hidden</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.7.1</h3>
+                    <h3 class="version-entry__title">0.7.1 <span class="version-entry__date">August 20, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fixed several issues with old YT non-Polymer layout</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.7</h3>
+                    <h3 class="version-entry__title">0.7 <span class="version-entry__date">August 17, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Plugin now activates on all YT pages and depending on location decides what to do</li>
                         <li>Moved buttons to top bar</li>
@@ -326,14 +326,14 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.6.1</h3>
+                    <h3 class="version-entry__title">0.6.1 <span class="version-entry__date">August 15, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Mark all as watched button added</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.6</h3>
+                    <h3 class="version-entry__title">0.6 <span class="version-entry__date">March 20, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Videos are now hidden automatically in field once you start watching a video, even without refreshing the feed page</li>
                         <li>Prettier Mark as Watched button</li>
@@ -342,21 +342,21 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.5</h3>
+                    <h3 class="version-entry__title">0.5 <span class="version-entry__date">February 1, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>Mark as watched button added</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.2</h3>
+                    <h3 class="version-entry__title">0.2 <span class="version-entry__date">January 25, 2018</span></h3>
                     <ul class="version-entry__changes">
                         <li>The Hide Watched button is now placed in the top right menu and changes color depending on light/dark mode in the new YT layout</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.1.4</h3>
+                    <h3 class="version-entry__title">0.1.4 <span class="version-entry__date">October 20, 2017</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fixed bug with hidden videos not reappearing after unchecking Hide Watched</li>
                         <li>When using YouTube's HIDE button, the thumbnail area will be automatically hidden</li>
@@ -364,21 +364,21 @@
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.1.3</h3>
+                    <h3 class="version-entry__title">0.1.3 <span class="version-entry__date">October 19, 2017</span></h3>
                     <ul class="version-entry__changes">
                         <li>Fix for YouTube's new late-loading of watched status and fix for watched not being hidden when loading more</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.1.2</h3>
+                    <h3 class="version-entry__title">0.1.2 <span class="version-entry__date">September 4, 2017</span></h3>
                     <ul class="version-entry__changes">
                         <li>Addon now works for YouTube's new design</li>
                     </ul>
                 </article>
 
                 <article class="version-entry">
-                    <h3 class="version-entry__title">0.1</h3>
+                    <h3 class="version-entry__title">0.1 <span class="version-entry__date">August 28, 2017</span></h3>
                     <ul class="version-entry__changes">
                         <li>First proof of concept version. Can hide and show videos</li>
                     </ul>
